Fixed invisible menu of the Settings tab

--- a/assets/css/cp_style.css
+++ b/assets/css/cp_style.css
@@ -91,6 +91,8 @@ body {
 }
 
 #setBg{
+  overflow-y: scroll;
+  height: 50vh;
 /*  overflow-y: scroll;*/
 }
 .settings-area{
